--- a/_posts/thesis_chapters/2023-12-5-Gdps.md
+++ b/_posts/thesis_chapters/2023-12-5-Gdps.md
@@ -119,10 +119,6 @@ This chapter begins with reframing of game design patterns and game play design 
 The chapter then focuses on the use of game design patterns by participants
 drawing on detailed observations of practice. A discussion section explores implications and observations from these findings in relation to existing research and concepts. As part if this discussion, I draw on the examples of use of game design patterns in practice to explore the analysis of GDPs as a mid-level construct, of use both to designers and as a pedagogical tool for those seeking to help novice coders become inculcated into a coding community.
 
-
-
-
-
 <!-- In that community-focused analysis, the unit of activity/ analysis was the creation by individuals learners or pairs of an engaging game with an additional goal of exploring an environmental concept.  The implementation of GDPs as a unit of activity allows for a more detailed and granular exploration of the many actions and operations that comprise each pattern.  -->
 
 <!-- ## Other Documents
@@ -138,34 +134,35 @@ And the coding structure here
 https://docs.google.com/document/d/19PafC_w_7uObYL4v86IGeeFZTw2yKxjHfP_k85rHk_s/edit# -->
 
 
-
 ### On GDP as a germ-cell and unit of analysis
-<!-- Explore the dividing line  -->
 
-It is thus potentially helpful to undertake a deeper analysis of the design patterns and specifically game design patterns at this point.  
+In the introduction, I outlined some of the broader challenges of sharing practice and research to practically support the learning of coding practices beyond the immediate context of the research in question. The choice of what scope of activity to examine in detail is relevant to this challenge. While this concept of germ cell / unit of analysis a is more typically used in a larger scope of societal activity, the principles apply this smaller scope. For a study of this nature, too broad an analysis risks insufficient detail to allow replication, too narrow risks being overly context dependant and limiting the potential for wider application.
 
-Recap on the value of design patterns in learning design which exist at different scopes of activity [@mcandrew_patterns_2006].
+This chapter centres on the exploration of the implementation of game design patterns (GDPs) as a key objective of in a way which correlates with the mid-level activity described in the last chapter. The same concept can be expressed using AT terminoligy as the use of GDPs as a unit of analysis or germ-cell of activity, two similar concepts with slightly different foci.
 
-How design patterns interplay with design principles and how the process relates to design based research  [@linn_science_2006].
+<!-- Mid-level construct of design / patterns heuristics [] -->
 
+    ... the germ-cell and the unit of analysis are one and the same thing, but in one case the developmental aspect is emphasised and in the other case the analytical aspect is emphasised. [@blunden_unit_2020]
 
-
-
-MOVE TO METHODOLOGY? Blunden cites the process of identifying a germ cell of activity as a fruitful process for researchers [FIND]. In addition, Engestrom frames expansive learning as instructive for organisational change. While research is more sparse in the field of educational practice, the principles are frequently applied to classroom practice.
-
-This chapter proposes the use of GDPs as a germ-cell and unit of analysis
-
-While this concept of germ cell / unit of analysis a is more typically used in a larger scope of societal activity, the principles apply this smaller scope.
-
-Mid-level construct of design / patterns heuristics []
-NOTE - Explain that this  fits into the gap of research addressed in the introduction - the challenge of sharing practice and pedagogy beyond context.  
-
-
-Both concepts are similar but different focus.
-
-    Thus the germ-cell and the unit of analysis are one and the same thing, but in one case the developmental aspect is emphasised and in the other case the analytical aspect is emphasised. [@blunden_unit_2020]
 
 As a designer / researcher and practitioner both aspects are relevant and are explored separately in the following two sections.
+
+IS THIS NEEDED HERE? OR REDO THIS.
+It is thus potentially helpful to undertake a deeper analysis of the design patterns and specifically game design patterns at this point.  Recap on the value of design patterns in learning design which exist at different scopes of activity [@mcandrew_patterns_2006].(CHECK THIS)
+How design patterns interplay with design principles and how the process relates to design based research  [@linn_science_2006].
+
+#### On GDPs as a concept to help analysis
+
+<!-- MOVE TO METHODOLOGY - JUST GET ON WITH IT?
+Blunden cites the process of identifying a germ cell of activity as a fruitful process for researchers [FIND]. In addition, Engestrom frames expansive learning as instructive for organisational change. While research is more sparse in the field of educational practice, the principles are frequently applied to classroom practice. -->
+
+
+My decision to privilege the implementation of each GDP as the main objective  activity system mirrors choices by other researchers valuing a granular exploration of the tensions and processes at work in a complex process [@barab_using_2002].  The process of describing and to identify emerging barriers and responses to comprehension, communication and practical barriers to implementing code structures facilitates replicability of this research and supports its potential value to other practitioners.
+
+In analysis of data, the focus at a level of sub features of the game rather than simply the over all game, allows for the identification of frequent iterations of discussion, design, implementation and either self-testing or community playtesting after each new pattern added. This repetition allows for patterns of behaviour to emerge more clearly from analysis. Each GDP can be seen as a project given an interpretation of project as the concrete implementation of a goal. This sentiment is echoed by something I found in the video data. As one parent expressed when looking at the documentation for implementing one of the GDPs. "It’s like a project in itself really".
+
+In addition, the process of seeking and defining a key area for analysis helps define useful  boundaries of what to analyse in depth, thus help avoid over-scoping of the study in which preludes depth of analysis.
+
 
 #### On GDPs as a germ concept to help practical development
 
@@ -185,53 +182,6 @@ For example, in the last chapter I described how the smaller quick changes could
 
 THIS NEEDS TO BE CLEARER.
 
-
-#### On GDPs as a concept to help analysis
-
-LATER?
-For this research, I have chosen to privilege the implementation of each pattern as a sub-activity system. The justification for this mirrors choices by other researchers who see the utility in a more granular exploration of the processes at work in a complex process [@barab_using_2002]. To help ground the reader, the following section describes this scope of the activity using the context of the above vignette.
-
-
-COMPRESS THIS OR DROP OR MOVE? - IT DOESN'T ADD A GREAT DEAL TO THE END FINDINGS?
-
-The implementation of GDPs as a unit of analysis for the researcher also has the following utility / validity;
-
-- There is a practicality in terms of defining possible boundaries of what to analyse in depth.
-- There is a more frequent iteration present - usually a period of playtesting after each new pattern added.
-- This research with a practitioner focus, looks to identify emerging barriers to comprehension, communication and practical barriers to implementing code structures. Thus a smaller unit that allows a large amount of granularity is useful. (compared to broader observations)
-- Each GDP can be seen as a project given an interpretation of project as the concrete implementation of a goal
-- That concreteness / implementation is particularly valid given the regular play-testing of creations often after each GDP is added in a peer environment.
-
-This sentiment is echoed by something I found in the video data. As one parent expressed when looking at the documentation for implementing one of the GDPs. "It’s like a project in itself really"
-
-
-Analysing the implementation of GDPs as a unit of activity allows the use of useful concepts to explore the specifics of participant behaviour. In the methodology and design chapter I explored the concept of resolving tensions involved in tool use and interaction with the learning design.
-
-MOVE FROM LAST CHAPTER
-
-**Building familiarity with game structure**
-
-
-EDIT THIS DOWN AND BE CLEAR ON THE MOTIVATION IN TERMS OF AGENCY AND BARRIERS TO PARTICPATION
-
-- Building familiarity with the code - -.  alienation barriers  
-- choice and navigations - > agency
-
-
-In my adaptation I had asked participants to do play a number of retro arcade and console games and then to complete created a printable A3 hand out which was given to participant after playing The key elements I are:
-
-- SPACE: Where the game takes place.
-- GOAL: What is the objective of the game? What are you trying to do?
-- COMPONENTS: What are all the objects or actors in the game?
-- MECHANICS: What actions take place in the game. What are the verbs involved?
-- RULES: What can or can’t you do in the game? What defines boundaries? Does play happen in real time or do you take turns?
-
-
-This structure chosen to present support materials to participants mirrors and potentially reinforces the framework used initially to analyse game elements.
-
-The motivation is to incrementally build familiarity with the language and concepts of game design through begining with analysis, then categories use when seeking desired patterns, and further via reading supporting documentation.
-
-While the process of games analysis has limited research for novice game makers, there is related research in the field of learning text coding. FIND?
 
 
 ## Study of Vignette A
@@ -351,21 +301,28 @@ https://docs.google.com/document/d/19PafC_w_7uObYL4v86IGeeFZTw2yKxjHfP_k85rHk_s/
 
 ### Descriptive Commentary on Vignette A
 
-The parent has taken on the role of solving harder code problems following  instructions carefully. The child is one of the younger participants when blockages occur she explores the room or to dwell on the periphery of other participants interactions. As well as the key and door pattern which has just been implemented, the child also wants to add additional levels to the game. It is likely that this stems from observations of other games being made and conversations overheard. As this pattern has been added to other games and has become a popular topic of discourse between participants.
+The parent has taken on the role of solving harder code problems following  instructions carefully. The child is one of the younger participants when blockages occur she explores the room or to dwell on the periphery of other participants interactions. As well as the key and door pattern which has just been implemented, the child also wants to add additional levels to the game. In this and the previous sessions several young participants had added levels to their games and this GDP sparked discourse between participants. It is likely that this Th's interest stems at least in part from observations of other participants games and this discourse.
 
-The key and door pattern is one of the harder ones to implement as it involves adding two new functions, which while simple enough, represent new code structures and thus this adds a new level of conceptual and practical complexity. This is borne out in the coding blockage the family found themselves in the first part of the session. The supporting resources for this pattern are included in Appendix 6.x. The parent finally circumnavigates her own hesitancy by asking for facilitator help by sending out her child to ask.
+The key and door pattern is one of the harder ones to implement as it involves adding two new functions, which while simple enough, represent new code structures and thus this adds a new level of conceptual and practical complexity. This is borne out in the coding blockage the family found themselves in the first part of the session. The supporting resources for this pattern are included in Appendix 6.x. The parent finally circumnavigates the conflict of her own hesitancy regarding asking for facilitator help by sending out her child to ask. REWRITE IN SANNINO TERMS.
 
 <!--
 The supporting resources are available here.
 https://en.flossmanuals.net/phaser-game-making-in-glitch/_full/#game-mechanic-keys-and-doors -->
 
-For both parent and child there is an explicit awareness of game making patterns, the cultural conventions of a platformer game and concept of the game as a dynamic system. This awareness drives their work on the design and coding mechanics of the game.  The target game design pattern Keys and Doors is repeated in a sing song voice by the child along with chivvying.
+Both parent and child show explicit and implicit awareness of game making patterns, .
+For example, one target game design pattern _Keys and Doors_ is repeated in a sing song voice by the child along with chivvying to the mother to get started on it.
 
-Understanding of the game as a dynamic system is seen clearly in the parent’s alarm at the child’s deletion of all elements of hazard. This interaction shows the parent guiding the child to imagine the user experience through the use of terms from GDPs. The parent uses GDPs as a prompt that they are designing for others. The child has also thought ahead to this time of playtesting. Both child and parent make reference to the imagined player experiences. In the vignette above Sh mentions "it's no fun if their are no hazards". The response of Th "It is for me." indicates a desire to play against game conventions with a desire to confuse or disorient players.
+There is also awareness of the conventions of a platformer game as a dynamic system in way which drives their work on the design and coding mechanics of the game.  An understanding of the game as a dynamic system is seen clearly in the parent’s alarm at the child’s deletion of all elements of hazard. This interaction shows the parent guiding the child to imagine the user experience (LINK WITH HCI TERMS) through the use of terms from GDPs. The parent uses GDPs as a prompt that they are designing for others. The child has also thought ahead to this time of playtesting. Both child and parent make reference to the imagined player experiences. In the vignette above Sh mentions "it's no fun if their are no hazards". The response of Th "It is for me." indicates an awareness of the conventions and a desire to play against them. The child articulate her motivation to _surprise_ players.
 
-Game making patterns are outlined by both the child and parent. They talk of adding more levels, of the mechanic of keys and doors in this vignette. After a blockage caused by debugging coding is removed, the parent immediately re-engages the child. The parent says "Did you see Th?" and then prompts the child to play-test the game. The child is keen to both replicate the GDP of keys and doors in the second level and to add a new GDP of adding additional levels to the game.  
+Game making patterns are outlined by both the child and parent. They talk of adding more levels, of the mechanic of keys and doors in this vignette. After a blockage caused by debugging coding is removed, the parent immediately re-engages the child. The parent says "Did you see Th?" and then prompts the child to play-test the game. The child is keen to both replicate the GDP of keys and doors in the second level and to add a new GDP of adding additional levels to the game.  THIS BECOMES A PATTERN OF CLYCLICAR IMPLEMENTATIONS EXPLORED BELOW.
 
-Completion of the code implementation of a GDP allows for new possibilities in design dynamics using the same text matrix level design tool. This stage of working on a new GDP sustains the child's activity. The child shows high engagement at this stage outlining her plan for implementing the pattern in the process of designing their game. The transformation from the period of time when her parent was problem solving code is dramatic. For this child this alternation between higher and lower engagement with the coding processes happening on screen was fairly consistent. The implementation of a new GDP often involves adding new code to the game or a significant change in code which may need debugging. For this pair, larger coding activities were beyond the ability of the child. The transition from adding one GDP involves playtesting. In this example, the process of playtesting also involves the child speaking and identification of modifications to and new GDPs to implement.
+Completion of the code implementation of a GDP allows for new possibilities in design dynamics using the same text matrix level design tool. This stage of working on a new GDP sustains the child's activity. The child shows high engagement at this stage outlining her plan for implementing the pattern in the process of designing their game. sPECIFICALLY SAYING X, Y Z.
+The transformation from the period of time when her parent was problem solving code is dramatic. For this child this alternation between higher and lower engagement with the coding processes happening on screen was fairly consistent. AS A CYCLE 
+
+The implementation of a new GDP often involves adding new code to the game or a significant change in code which may need debugging. For this pair, larger coding activities were beyond the ability of the child. The transition from adding one GDP involves playtesting. In this example, the process of playtesting also involves the child speaking and identification of modifications to and new GDPs to implement.
+
+
+ADD IN APPENDIX OF MAPS - AND GDPS FOR NAVIGATIONS AND REFRAME IN THIS CHAPTER.
 
 <!-- NOTE - MOVE TO ANOTHER SECTIONS WITH TRIANGULATION? -->
 <!-- ### Gdp and motivation -->
@@ -409,6 +366,37 @@ SHIFT THIS TO Methodolgy & SUMMARISE HERE -->
 <!-- NOTE - ADD QUICK SUMMARY OF PREVIOUS CHAPTERS FINDINGS - IF THIS HELPS GROUND THIS SECTION -->
 <!-- - Tools: Specifics on Code Playgrounds and Phaser and a Javascript framework -->
 <!-- - the media literacy practices of transfer between tools - similar to other studies - see guided participation papers -->
+
+### The process of building familiarity with game design structure including GDPs
+
+EDIT THIS DOWN AND BE CLEAR ON THE MOTIVATION IN TERMS OF AGENCY AND BARRIERS TO PARTICPATION -
+THIS WAS MOVED HERE -  DOES IT REALLY LIVE HERE?
+
+
+The process of understanding game structure did not emerge completely unpromted, itw as inspired by previous work inspired by reseaarch from IOPlay, GSM, etc.
+
+
+- Building familiarity with the code - -.  alienation barriers  
+- choice and navigations - > agency
+
+
+In my adaptation I had asked participants to do play a number of retro arcade and console games and then to complete created a printable A3 hand out which was given to participant after playing The key elements I are:
+
+- SPACE: Where the game takes place.
+- GOAL: What is the objective of the game? What are you trying to do?
+- COMPONENTS: What are all the objects or actors in the game?
+- MECHANICS: What actions take place in the game. What are the verbs involved?
+- RULES: What can or can’t you do in the game? What defines boundaries? Does play happen in real time or do you take turns?
+
+
+This structure chosen to present support materials to participants mirrors and potentially reinforces the framework used initially to analyse game elements.
+
+The motivation is to incrementally build familiarity with the language and concepts of game design through begining with analysis, then categories use when seeking desired patterns, and further via reading supporting documentation.
+
+While the process of games analysis has limited research for novice game makers, there is related research in the field of learning text coding. FIND?
+
+
+
 
 
 ### The propagation of use of GDPs through playtesting
