--- a/_posts/thesis_chapters/2023-12-6-Methods.md
+++ b/_posts/thesis_chapters/2023-12-6-Methods.md
@@ -216,11 +216,7 @@ Exploring classroom culture, Engeström [-@engestrom1998reorganizing] notes the 
 
 <!-- NOTE - Find complexity here?  -->
 
-
-
-
-
-### Note this has been moved from Design chapter  so needs a place to sit. 
+### Note this has been moved from Design chapter  so needs a place to sit.
 ### Using Physical Maps of Missions as Game Design Patterns
 
 I used flip chart paper and print outs to draw a coastal landscape with GDPs represented as different islands.  I asked learners to create and personalise a movable marker representing themselves. When learners selected their next mission, they moved their counter to the relevant island. Thus learners had to be intentional about their next goal and were implicitly encouraged to stick to it.
@@ -249,13 +245,15 @@ While it is beyond the remit of this thesis to examine the impact of these proce
 
 
 
-
-
 ### Barriers of identity hardcore coding & dysfunctional group work - REALLY COMPRESS UNLESS DATA BECOMES PRESENT - USE AS BASIS FOR DISCUSSION?
 
 NOTE DUPLICATION WITH DESIGN CHAPTER.
 
-In chapter 4 I surfaced the conflict experiences by participants in phase one of the process where an alienation from the culture of coding prevented participation. In this section I explore the barriers in more depth
+In chapter 4 I surfaced the conflict experiences by participants in phase one of the process where an alienation from the culture of coding prevented participation. While this was articulated clearly by just one family, this aligns with the thread of the LR exploring barriers to participation in the the culture of coding. In this section I explore the emerging tensions / barriers in more depth (and responses) to provide context for the following chapters sections.
+NOTE - REALLY HERE? IS THERE A BETTER PLACE? CH.4?
+
+NOTE - MENTION SOURCE OF FAMILY FROM THE DIGITAL BRAVES ACTIVITY?
+While speculative, it may be of significance that this family had also attended an open workshop for families before this programme which used drama processes to begin to explore issues of digital tracking and give hands on coding experiences. It is possible that it was this combination of tech and non-tech activities which gave them the confidence to attend a program based around coding.  When the family withdrew, in my journal notes I reflected that the they shared of alienation from the group process occurred in a session where, due to a sense of urgency to complete games, I had omitted drama-based warm up activities. Instead as participant entered I began to support to help some participants debug some pressing code errors.
 
 
 <!-- **Participants stuck / demotivated : scope of ambition to high,  clashes of identity not hard core coders, no on-going playtesting, collaboration groups too big (transition),**
@@ -308,7 +306,6 @@ Thus in the next iteration, rather than the larger groups, smaller groups, allow
 
 These tensions are mirrored in similar research and were highlighted in the practitioner interviews that I conducted.
 
-The fruits of this freedom of participation are explored in chapter five.
 
 
 **A game encouraging maker / player types**
@@ -353,9 +350,6 @@ I translated player types to maker types based on notes in my observation journa
 so there's a problem in getting any data from this
 however the rationale is intact and  -->
 
-
-
-
 <!-- For examples in the Vignette of S and T's interaction we can see attributes of the child as a Glitcher. In terms of understanding of the game as a dynamic system, this is seen clearly in the parent's alarm at the child's deletion of all elements of hazard. The parent is keen to keep a sense of game balance to ensure a sense of challenge for the imagined player. "It's no fun having a game without any hazards to avoid." The child seems determined to remove all hazards.  -->
 
 This line of thinking developed from a warm-up activity trialled in P3 were participants took the Bartle test (what kind of game player are you).  
@@ -381,9 +375,6 @@ While many families talked of the challenge of coding, one family in particular 
 In reflection on the session that ended their participation
 
 INSERT SOME ANALYSIS HERE BASED ON AGENCY AND AFFORDENCES OFFERED
-
-
-
 
 ## Exploring the impact of a drama processes
 
