editing gdp based on black ink notes

--- a/_posts/thesis_chapters/2023-12-5-Gdps.md
+++ b/_posts/thesis_chapters/2023-12-5-Gdps.md
@@ -309,17 +309,18 @@ The key and door pattern is one of the harder ones to implement as it involves a
 The supporting resources are available here.
 https://en.flossmanuals.net/phaser-game-making-in-glitch/_full/#game-mechanic-keys-and-doors -->
 
-Both parent and child show explicit and implicit awareness of game making patterns, .
-For example, one target game design pattern _Keys and Doors_ is repeated in a sing song voice by the child along with chivvying to the mother to get started on it.
+Both parent and child show explicit and implicit awareness of game making patterns. For example, one target game design pattern _Keys and Doors_ is repeated in a sing song voice by the child along with chivvying to the mother to get started on it.
 
 There is also awareness of the conventions of a platformer game as a dynamic system in way which drives their work on the design and coding mechanics of the game.  An understanding of the game as a dynamic system is seen clearly in the parent’s alarm at the child’s deletion of all elements of hazard. This interaction shows the parent guiding the child to imagine the user experience (LINK WITH HCI TERMS) through the use of terms from GDPs. The parent uses GDPs as a prompt that they are designing for others. The child has also thought ahead to this time of playtesting. Both child and parent make reference to the imagined player experiences. In the vignette above Sh mentions "it's no fun if their are no hazards". The response of Th "It is for me." indicates an awareness of the conventions and a desire to play against them. The child articulate her motivation to _surprise_ players.
 
-Game making patterns are outlined by both the child and parent. They talk of adding more levels, of the mechanic of keys and doors in this vignette. After a blockage caused by debugging coding is removed, the parent immediately re-engages the child. The parent says "Did you see Th?" and then prompts the child to play-test the game. The child is keen to both replicate the GDP of keys and doors in the second level and to add a new GDP of adding additional levels to the game.  THIS BECOMES A PATTERN OF CLYCLICAR IMPLEMENTATIONS EXPLORED BELOW.
+Game making patterns are outlined by both the child and parent. They talk of adding more levels, of the mechanic of keys and doors in this vignette. After a blockage caused by debugging coding is removed, the parent immediately re-engages the child. The parent says "Did you see Th?" and then prompts the child to play-test the game. The child is keen to both replicate the GDP of keys and doors in the second level and to add a new GDP of adding additional levels to the game.  
 
-Completion of the code implementation of a GDP allows for new possibilities in design dynamics using the same text matrix level design tool. This stage of working on a new GDP sustains the child's activity. The child shows high engagement at this stage outlining her plan for implementing the pattern in the process of designing their game. sPECIFICALLY SAYING X, Y Z.
-The transformation from the period of time when her parent was problem solving code is dramatic. For this child this alternation between higher and lower engagement with the coding processes happening on screen was fairly consistent. AS A CYCLE 
+The implementation of a new GDP involve adding new code to the game. The amount of code and changes needed varied depending on its complexity. Larger changes typically need more careful manipulation of code and subsequent debugging. For this pair, these more involved coding activities were beyond the ability of the child.
 
-The implementation of a new GDP often involves adding new code to the game or a significant change in code which may need debugging. For this pair, larger coding activities were beyond the ability of the child. The transition from adding one GDP involves playtesting. In this example, the process of playtesting also involves the child speaking and identification of modifications to and new GDPs to implement.
+For this child developed a cyclicar pattern of alternation between higher and lower engagement with the coding processes based on lower engagement the period of time when her parent was problem solving code and higher engagement once it was implemention of the structural element was almost complete. Completion of the code implementation of a GDP allows for new possibilities in design dynamics using the same text matrix level design tool. This stage of working on a new GDP sustains the child's activity. The child shows high engagement at this stage outlining her plan for implementing the pattern in the process of designing their game. sPECIFICALLY SAYING X, Y Z.
+
+As the child progress from making changes to then testing them her engagement stays high. In this example, the process of playtesting also involves the child speaking and identification of modifications to and new GDPs to implement.
+PULL OUT AN EXAMPLE
 
 
 ADD IN APPENDIX OF MAPS - AND GDPS FOR NAVIGATIONS AND REFRAME IN THIS CHAPTER.
@@ -330,9 +331,9 @@ ADD IN APPENDIX OF MAPS - AND GDPS FOR NAVIGATIONS AND REFRAME IN THIS CHAPTER.
 <!-- The process of personal development of knowledge is less clear from video data.
 NOTE - SOME MORE READING ON AN INTERPRETATION OF THIS THAT I CAN WORK WITH FOR THIS DATA IS PERHAPS NEEDED. -->
 
-The adult is building proficiency in coding practice. This is shown in a variety of ways including; finding and comprehending supporting documentation, fluidly navigating between undertaking more advanced coding to implement new GDPs, playtesting and preparing the coding environment for more basic coding of her child.
+In the programme Sh has built important proficiency in coding practice, which include; finding and comprehending supporting documentation, fluidly navigating between undertaking more advanced coding to implement new GDPs, playtesting and preparing the coding environment for more basic coding of her child. The parent navigates this process skilfully and is able to incorporate the child's interests. She takes signals clearly to her child when the process returns certain design stages indicating that she is aware of the greater possibility for effective child input at these moments.
 
-This chapter now expands to represent the diversity  of the coding and community practices of participants through focusing on their use of game design patterns. (and opportunites for educators)
+While this adult structured the process of implementing new GDPs through engaging with documentation in a careful and methodical  way, other individuals and pairs approached the same objectives in diverse ways. This chapter now expands to represent the diversity  of the coding and community practices of participants through focusing on their use of game design patterns. (and opportunities for educators)
 
 
 <!-- The child uses her concepts of game design patterns in the end of course evaluation. She responded to the question _What would you like to see next time? What would you add?_ with the comment. "Th: I'd add a health bar and lots more levels and keep on changing the characters and background." -->
@@ -352,15 +353,11 @@ NOTE HOW THESE FINDING ARE STRUCTURED. MOVE TO INTRO?
 
 In the previous chapter the role of cultural activities to engage and sustain engagement in this game making programme were examined. This chapter allows us to develop this direction to focus in on the way design patterns used are by parents, children and facilitators in in this emerging game making community.
 
-
 <!-- ### Using cultural, interpersonal & Personal Planes Analysis of use of GDPs
 
 SHIFT THIS TO Methodolgy & SUMMARISE HERE -->
 
 <!-- Acknowledging that these observation do not fall nearly into each of the three planes, I begin with those oriented more to cultural focus before progressing to  observations oriented chiefly to interpersonal activity and  then ending with some observation on GDPs impact on personal knowledge construction. -->
-
-
-
 
 
 <!-- NOTE - ADD QUICK SUMMARY OF PREVIOUS CHAPTERS FINDINGS - IF THIS HELPS GROUND THIS SECTION -->
